--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <script src="app.js" defer></script>
 </head>
 <body>
+    <h1>Calculator</h1>
     <div class="container">
+        
         <input class="item-0" type="text" placeholder="0">
         <!-- <button class="item-1">0</button> -->
         <button class="item-2 number">+</button>
@@ -30,7 +33,7 @@
         <button class="item-18 number">AC</button>
         <button class="item-19 number">C</button>
         <button class="item-20 number">%</button>
-
+    
     </div>
 </body>
 </html>
